--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <br>
     <button id="save">Сохранить</button>
     <button id="clear">Очистить</button>
-    <script rel="script" type="javascript" src="js/script.js"></script>
+    <script rel="script" src="js/script.js"></script>
 </body>
 </html>
