small cosmetic changes in first task

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+    <h2 id="query">Введите ваш город пребывания:</h2>
+    <h2 id="message">Ваш город: "<span id="myCity"></span>"</h2>
     <textarea style="width:200px; height: 60px;" id="area" placeholder="Напишите сообщение здесь"></textarea>
     <br>
+    <h3 id="result"></h3>
     <button id="save">Сохранить</button>
     <button id="clear">Очистить</button>
     <script rel="script" src="js/script.js"></script>
