add save chackbox logic

--- a/index.html
+++ b/index.html
@@ -17,21 +17,22 @@
     </section>
     <section>
         <h2>Выберите свои предпочтения</h2>
-        <input type="checkbox" id="nocall">
+        <input type="checkbox" id="nocall" class="preferences">
         <label for ='nocall'>Не звоните мне;</label><br>
-        <input type="checkbox" id = "agree">
+        <input type="checkbox" id = "agree" class="preferences">
         <label for ='agree'>я прочитал и согласен с правилами пользования сервисом;</label><br>
-        <input type="checkbox" id="notChoose">
+        <input type="checkbox" id="notChoose" class="preferences">
         <label for ='notChoose'>я не выбираю эту галочку;</label><br>
-        <input type="checkbox" id="freedom">
+        <input type="checkbox" id="freedom" class="preferences">
         <label for ='freedom'>я подтверждаю, что свобода в интернете;</label><br>
-        <input type="checkbox" id="adult">
+        <input type="checkbox" id="adult" class="preferences">
         <label for ='adult'>мне больше 12 лет;</label><br>
-        <input type="checkbox" id="correct">
+        <input type="checkbox" id="correct" class="preferences">
         <label for ='correct'>это задание выполнено правильно;</label><br>
         <button id="submit">Сохранить выбор</button>
     </section>
 
-    <script rel="script" src="js/script.js"></script>
+    <script rel="script" src="js/save_city.js"></script>
+    <script rel="script" src="js/save_choices.js"></script>
 </body>
 </html>
