--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
 </head>
 <body>
     <section>
-        <h2 id="query">Введите ваш город пребывания:</h2>
-        <h2 id="message">Ваш город: "<span id="myCity"></span>"</h2>
-        <textarea style="width:200px; height: 60px;" id="area" placeholder="Напишите сообщение здесь"></textarea>
-        <br>
-        <h3 id="result"></h3>
+        <h2 id="message"></h2>
+        <textarea style="width:200px; height: 60px;" id="area" placeholder="Укажи свой город    "></textarea>
+        <h2 id="result"></h2>
         <button id="save">Сохранить</button>
         <button id="clear">Очистить</button>
     </section>
